--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
-  <h1>Steffen Krogmann</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+---
+layout: default
+---
+<h1>Steffen Krogmann</h1>
+<p>Welcome to my website!</p>
+<img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
